--- a/aexis/pyproject.toml
+++ b/aexis/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "google-genai>=1.57.0",
     "networkx>=3.6.1",
     "redis>=5.0.0",
+    "redis[hiredis]>=5.0.0",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "websockets>=12.0",
