--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,21 @@ REDIS_PASSWORD=your_redis_password_here
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-# Gemini API Configuration
+# AI Provider Configuration
+AI_PROVIDER=mock
+# Options: mock, gemini
+
+# Gemini API Configuration (only needed if AI_PROVIDER=gemini)
 GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-3-pro-preview
 
 # System Configuration
 POD_COUNT=25
 STATION_COUNT=8
+
+# Logging Configuration
+LOG_LEVEL=INFO
+SNAPSHOT_INTERVAL=300
+
+# UI Configuration
 UI_PORT=8000
