--- a/aexis/pyproject.toml
+++ b/aexis/pyproject.toml
@@ -10,10 +10,11 @@ dependencies = [
     "redis>=5.0.0",
     "redis[hiredis]>=5.0.0",
     "fastapi>=0.104.0",
-    "uvicorn>=0.24.0",
+    "uvicorn[standard]>=0.24.0",
     "websockets>=12.0",
     "pydantic>=2.5.0",
     "python-multipart>=0.0.6",
+    "httpx>=0.25.0",
 ]
 
 [dependency-groups]
