--- a/aexis/pyproject.toml
+++ b/aexis/pyproject.toml
@@ -20,4 +20,11 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest==8.4.1",
+    "pytest-asyncio>=0.23.0",
+    "hypothesis>=6.92.0",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+pythonpath = ["."]
+testpaths = ["aexis/tests"]
