--- a/aexis/pyproject.toml
+++ b/aexis/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.5.0",
     "python-multipart>=0.0.6",
     "httpx>=0.25.0",
+    "tabulate>=0.9.0",
 ]
 
 [dependency-groups]
